--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ function createTerminalWindow() {
         </div>
         <div class="terminal-content" id="termContent"></div>
         <div class="terminal-input-line">
-            <span class="terminal-prompt" id="prompt">user@SimmerOS-Web-1 ~ ></span>
+            <span class="terminal-prompt" id="prompt">user@Web-OS ~ ></span>
             <div class="terminal-input" contenteditable="true" id="termInput"></div>
         </div>
     `;
