--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
     <title>WebOS</title>
     <style>
         body {
