--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+	    <link rel="icon" href="https://raw.githubusercontent.com/SuperHackz/WebOS/refs/heads/main/favicon.ico" type="image/x-icon"/>
 
     <title>WebOS</title>
     <style>
